# robotics_spot

./: .gitignore  README.md  build_robot.sh  build_simulation.sh  robot_application.sh  simulation_application.sh  simulation_job.sh
champ_bringup/: package.xml
champ_bringup/launch/: bringup.launch
champ_navigation/rviz/: navigate.rviz
docker/ros_melodic/: Dockerfile  run.bash
docker/ros_spot/: .rosinstall  Dockerfile
robot_ws/src/rs_inverse/: package.xml
robot_ws/src/rs_inverse/launch/: inverse.launch
robot_ws/src/rs_inverse/scripts/: env_tester.py  gui_spot.py  stand_mode_spot.py
robot_ws/src/rs_teleop/: CMakeLists.txt  package.xml  teleop_rs_keyboard.py
rs_config/: CMakeLists.txt  package.xml
rs_config/config/gait/: gait.yaml
rs_config/config/move_base/: global_costmap_params.yaml  local_costmap_params.yaml
rs_config/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
rs_config/launch/include/: amcl.launch  move_base.launch
rs_config/maps/: gmapping_sshq4_2_6.pgm  gmapping_sshq4_2_6.yaml  ss_hq4.yaml
rs_contact_sensor/: CMakeLists.txt  ContactPlugin.cc  package.xml
rs_control/: CMakeLists.txt  package.xml
rs_control/config/: spot_control.yaml  spot_param_for_scripts.yaml
rs_control/launch/: spot_controller.launch
rs_control/scripts/: listeners.py  plot_joints.py  plot_one_leg.py  talker.py
rs_cv/: cv_aruco_detection.py  cv_node.py  cv_node_gauge.py  cv_ocr.py  cv_sensor_detection.py
rs_description/: CMakeLists.txt  frames.gv  package.xml
rs_description/launch/: description.launch
rs_description/urdf/: .spot.urdf.xacro.swp  spot.urdf (copy).xacro  spot.urdf.xacro  spotbox.urdf.xacro
rs_gazebo/: CMakeLists.txt  package.xml
rs_gazebo/cad/ss_austin/: long_table_collision.blend  long_table_visual.blend  mini_table_visual.blend  puffy.blend  simple_table_visual.blend  sofa_collision.blend  sofa_visual.blend  stool_visual.blend  talk_sofa_collision.blend  talk_sofa_visual.blend  talk_table_visual.blend
rs_gazebo/cad/ss_hq4/402_bookcase/: 402_bookcase_visual.blend  402_bookcase_visual.blend1  402_simple_bookcase_visual.blend1
rs_gazebo/cad/ss_hq4/402_phone/: 402_phone.blend1  402_phone_collision.blend  402_phone_visual.blend  402_phone_visual.blend1
rs_gazebo/cad/ss_hq4/402_simple_bookcase/: 402_simple_bookcase_visual.blend1
rs_gazebo/cad/ss_hq4/402_table/: 402_table.blend1  402_table_visual.blend
rs_gazebo/cad/ss_hq4/403_complex_chair/: 403_complex_chair_collision.blend  403_complex_chair_visual.blend
rs_gazebo/cad/ss_hq4/403_mini_table/: 403_mini_table_collision.blend  403_mini_table_visual.blend  403_mini_table_visual.blend1
rs_gazebo/cad/ss_hq4/403_sofa/: 403_sofa_collision.blend  403_sofa_visual.blend
rs_gazebo/cad/ss_hq4/403_table/: 403_table_collision.blend  403_table_visual.blend  403_table_visual.blend1
rs_gazebo/cad/ss_hq4/407_coffee_table/: 407_coffee_table_collision.blend1  407_coffee_table_visual.blend1
rs_gazebo/cad/ss_hq4/407_countertop/: 407_countertop.blend
rs_gazebo/cad/ss_hq4/407_kitchen_chair/: 407_kitchen_chair_collision.blend  407_kitchen_chair_visual.blend
rs_gazebo/cad/ss_hq4/407_kitchen_table/: 407_kitchen_table_collision.blend  407_kitchen_table_visual.blend  office.blend  office_chair.blend
rs_gazebo/cad/ss_hq4/407_shelves/: 407_shelves_visual.blend1
rs_gazebo/cad/ss_hq4/413_commode/: 413_commode_visual.blend  413_commode_visual.blend1
rs_gazebo/launch/: .HQ.launch.swp  HQ.launch  HQold.launch  gazebo.launch  robot.launch  towr_spawn_robot.launch
rs_gazebo/meshes/lond_fintech2018/: chair_collision.stl  chair_visual.dae  construction_collision.stl  construction_visual.dae  hight_table_collision.stl  hight_table_visual.dae  light_collision.stl  light_construction_collision.stl  light_construction_visual.dae  light_visual.dae  logo_collision.stl  logo_visual.dae  louver_collision.stl  louver_visual.dae  shelf_collision.stl  shelf_visual.dae  signboard_collision.stl  signboard_visual.dae  table1_collision.stl  table1_visual.dae  table2_collision.stl  table2_visual.dae
rs_gazebo/meshes/ss_austin/: kitchen_table_visual.dae  long_table_visual.dae  mini_table_visual.dae  office_chair_near_white_table_visual.dae  puffy_blue_visual.dae  simple_chair_visual.dae  sofa_collision.stl  sofa_visual.dae  stool_visual.dae  talk_sofa_visual.dae  talk_table_visual.dae
rs_gazebo/models/ss_austin/long_table/: model.sdf  (+1 more)
rs_gazebo/worlds/: detailed_2_inner.world  detailed_2_outer.world  detailed_subnode_of_meta_tag.world  fnt_world_outer.world  fnt_wrld_inner.world  lond_fintech2018.world  new_lond_fintech2018.world  office.world  ss_austin.world  ss_hq4.world  ss_hq4_.world  ss_hq4and5.world  stairs_only.world
rs_inverse/: CMakeLists.txt  package.xml
rs_inverse/scripts/: StairsGait.py  env_tester.py  gui_spot.py  plot_leg_trajectory.py  stand_mode_spot.py
rs_msgs/: CMakeLists.txt  package.xml
rs_msgs/msg/: GaitInput.msg
rs_navigation/: CMakeLists.txt  package.xml
rs_navigation/launch/: amcl.launch  coverage_demo.launch  navigate.launch
rs_navigation/maps/: ss_hq4.pgm  ss_hq4.yaml
rs_navigation/params/sim/full_coverage/: local_costmap_params.yaml  simple_goal.yaml
rs_navigation/rviz/: fcpp.rviz
rs_viz/: CMakeLists.txt  package.xml
scripts/: session.yaml  session.yml
simulation_ws/src/rs_description/: CMakeLists.txt
simulation_ws/src/rs_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/rs_gazebo/launch/: HQ.launch  robot.launch
simulation_ws/src/rs_inverse/: CMakeLists.txt
spot_description/: CMakeLists.txt
spot_description/urdf/: accessories.urdf.xacro  spot.urdf  spot.urdf.xacro
(+185 files in other folders)
