<?xml version="1.0"?>
<package>
  <name>rs_contact_sensor</name>
  <version>0.0.0</version>
  <description>The rs_contact_sensor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>

    <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." />
    </export>

</package>
