<?xml version="1.0"?>
<package format="2">
  <name>rs_navigation</name>
  <version>0.1.0</version>
  <description>Spot Navigation Package</description>

  <maintainer email="tboro@ssoftserveinc.com">Taras Borovets</maintainer>
  <author>Taras Borovets</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_gazebo</exec_depend>
  <exec_depend>champ_navigation</exec_depend>
  <exec_depend>spot_config</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>tracking_pid</exec_depend>
  
</package>
