<?xml version="1.0"?>
<package>
  <name>rs_gazebo</name>
  <version>0.0.0</version>
  <description>The rs_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
<!--  <run_depend>gazebo_ros_bumper_controller</run_depend>-->
  <run_depend>rs_description</run_depend>
  <run_depend>rs_control</run_depend>
  <run_depend>ros_controllers</run_depend>

    <export>
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." />
    </export>

</package>
